Merge nieuwDomein into main (#23)
* SDP2324VC2-142 Implementatie van nieuw domeinmodel

* SDP2324VC2-142 Opnieuw opmaken van data adhv nieuwe structuur

* SDP2324VC2-142 Oplossen errors bij aanmaken van data in db

* SDP2324VC2-142 Bestaande Rol gebruiken als discriminator

* SDP2324VC2-142 Domein aanpassingen doorvoeren naar testen

* SDP2324VC2-142 Toevoegen van gebruikersnaam checks in builder

* SDP2324VC2-142 gui builder setters gebruiken & builder phone validatie